Fixing Dark mode in header.

--- a/client/src/components/Atoms/UserInfo/UserInfo.module.css
+++ b/client/src/components/Atoms/UserInfo/UserInfo.module.css
@@ -10,6 +10,7 @@
   width: 34px;
   height: 34px;
   border-radius: 100%;
+  border: 1px solid currentColor;
   overflow: hidden;
 }
 
@@ -22,7 +23,6 @@
 .UserName {
   font-weight: 600;
   font-size: 12px;
-  color: var(--secondColor);
 }
 
 @media screen and (min-width: 768px) {
