--- a/client/src/components/Molecules/UserHeader/UserHeader.module.css
+++ b/client/src/components/Molecules/UserHeader/UserHeader.module.css
@@ -4,7 +4,6 @@
   gap: 50px;
   justify-content: center;
   align-items: center;
-  color: var(--secondColor);
 }
 
 .menuIcon {
