--- a/client/src/components/Organisms/ModalEditUser/ModalEditUser.module.css
+++ b/client/src/components/Organisms/ModalEditUser/ModalEditUser.module.css
@@ -11,6 +11,7 @@
   width: 103px;
   height: 103px;
   border-radius: 100%;
+  border: 1px solid currentColor;
   background-color: var(--secondBg);
   display: flex;
   justify-content: center;
@@ -33,7 +34,7 @@
 }
 
 .user:hover .iconPlus {
-  transform: scale(1.2);
+  transform: scale(1.2) rotate(360deg);
   transition: transform 500ms;
 }
 
@@ -51,11 +52,14 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 8px;
-  color: var(--secondColor);
-  border: 1px solid currentColor;
+  border: 1px solid var(--thirdColor);
   border-radius: 6px;
   font-size: 14px;
   font-weight: 400;
+}
+
+.inputContainer.isDark {
+  border-color: var(--primaryColor);
 }
 
 .iconEdit {
@@ -69,6 +73,7 @@
   width: 24px;
   height: 24px;
   color: currentColor;
+  opacity: 100%;
 }
 
 .image {
