--- a/client/src/components/Templates/Modal/Modal.module.css
+++ b/client/src/components/Templates/Modal/Modal.module.css
@@ -21,11 +21,15 @@
   border-radius: 30px;
 }
 
+.Modal.isDark {
+  background-color: var(--paginationBgDark);
+}
+
 .button {
   position: absolute;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
-  color: var(--closeIcon);
+  color: currentColor;
 }
