--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,6 @@ body {
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--primaryColor);
 }
 
 ::-webkit-scrollbar {
